# vector-embedding-server

./: .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: linting-and-testing.yml
tests/: conftest.py  test_auth.py  test_e5_large_v2.py  test_embeddings_api.py
vector_embedding_server/: auth.py  e5_large_v2.py  openai_like_api_models.py  server.py  streaming_models.py
vector_embedding_server/templates/: stoplight-element-api-doc.html
